syntax = "proto3";

package chatservice;

option go_package = "github.com/maehiyu/tollo/protos/chatservice";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message StandardMessage {
  string content = 1;
}

message QuestionMessage {
  string content = 1;
  repeated string tags = 2;
}

message AnswerMessage {
  string content = 1;
  string question_id = 2;
}

message PromotionalMessage {
  string title = 1;
  string body = 2;
  string action_url = 3;
  string image_url = 4;
}

message Chat {
  string id = 1;
  string general_user_id = 2;
  string professional_user_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message Message {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  google.protobuf.Timestamp sent_at = 4;
  
  oneof message_payload {
    option (buf.validate.oneof).required = true;
    StandardMessage standard = 5;
    QuestionMessage question = 6;
    AnswerMessage answer = 7;
    PromotionalMessage promotional = 8;
  }
}

message SendMessageRequest {
  string chat_id = 1 [(buf.validate.field).string.uuid = true];
  string sender_id = 2 [(buf.validate.field).string.min_len = 1];

  oneof message_payload {
    option (buf.validate.oneof).required = true;
    StandardMessage standard = 3;
    QuestionMessage question = 4;
    AnswerMessage answer = 5;
    PromotionalMessage promotional = 6;
  }
}

message SendMessageResponse {
  Message sent_message = 1;
}
